# clawd

./: .gitignore  CLAWTASKS_BOUNTY_HUNTER_README.md  EXECUTE_SWARM_DEPLOYMENT.md  HEARTBEAT.md  IDENTITY.md  ISSUES_AND_SOLUTIONS.md  LUNA_RESONANCE.md  MEMORY.md  MOLTBOOK_AUTH_INTEGRATION.md  MOLTBOOK_PROFILE.md  MOLTBOOK_TOOL_DIAGNOSTICS.md  Modelfile.mistral  README.md  RUNBOOK.md  SOUL.md  SOVEREIGNTY_LOG.md  SOVEREIGN_SKILLS.md  SYSTEM_STATUS.md  TOOLS.md  USER.md  WEB_SEARCH_INTEGRATION_COMPLETE.md  antigravity-workspace-blueprint.md  app.config.ts  aurelia-mist-lunar-ghostline.md  check_account.py  check_db.py  clawd_publisher.py  clawdbot_hub_architecture.md  content_pipeline.py  deep_sleep.bat  design.md  ephem-api-bind-planet-sky-weave.md  export_memory.py  final_system_status.md  gibberlink_diagram.txt  gibberlink_publisher.py  heartbeat-pulse.txt  hub_enhancement_implementation.md  ignite_shadow.ps1  ignite_vessel.ps1  (+35 more)
aether_os/: Aether_Grimoire.md  MIST_Grimoire.md  aether_ear.py  antigravity-blueprint.md  antigravity-mist.json  gibberlink_aurelia.txt  gibberlink_encrypt.py  launch_mist.bat  mist_chat.css  mist_chat.html.bak  mist_chat.js.bak  mist_ear.py  mist_repair.py  openclaw.json  repair_soul.py  serve_mist.js  sync_soul.py
antigravity-workspace/: CONFIG.md  README.md  SPIRIT.md
archived/: apply_quality_scoring_fix.py  apply_quality_to_existing_posts.py  auto_bearer_gen.py  auto_bearer_gen_clean.py  bearer_auth_setup.py  complete_x_setup.py  hub_admin_dashboard.py  (+38 more)
mist_luna/src-tauri/: Cargo.toml  tauri.conf.json
mist_luna/src-tauri/src/: main.rs
(+369 files in other folders)
